* What's new in version 3.1, PRERELEASE

- New -T option allows the script to be terminated after a specified number
  of seconds. This is a shortcut for adding the probe, timer {exit()}.

- New installcheck-parallel testsuite feature allows running the tests in
  parallel in order to save time.  See testsuite/README for details.

* What's new in version 3.0, 2016-03-27

- The new experimental "interactive" mode, specified by "stap -i",
  drops you into a command-line prompt where you can build up a script,
  run it, edit it, run it again, etc. Type "help" for a list of commands.

- New experimental --monitor[=INTERVAL] option similar to unix "top". This
  allows users to see statistics about the running module(uptime, module name,
  invoker uid, memory sizes, global variables, and the current probe list
  along with their statistics).

  An interface is also provided to allow control over the running
  module(resetting global variables, sorting the list of probes, deactivating
  and reactivating probes).

- The performance of associative arrays have been dramatically
  improved, especially for densely filled tables and for multiple
  indexes.  The hash tables behind these arrays is now sized as a
  function of the array maximum size with an optional MAPHASHBIAS
  space/time tradeoff knob.

- Add macros @prints to print a scalar aggregate variable, @prints[1-9]
  to print an array aggregate (of given index-arity), formatted similarly
  to the automatic printing of written-only global variables.

  global a, b
  probe oneshot { a <<< 1; b[tid()] <<< 2 }
  probe end { @prints(a); @prints1(b) }

- Functions may now be overloaded during module runtime using the "next"
  statement in script functions and STAP_NEXT macro for embedded-C functions.
  They may also be overloaded by number of parameters during compile time.
  For example,

  Runtime overloading:
    function f() { if (condition) next; print("first function") }