@@ -1,0 +1,4 @@
+probe oneshot
+{
+    println("x", @const("STP_SKIP_BADVARS"), "y")
+}
