@@ -232,6 +232,7 @@ struct c_unparser: public unparser, public visitor
   void visit_autocast_op (autocast_op* e);
   void visit_atvar_op (atvar_op* e);
   void visit_defined_op (defined_op* e);
+  void visit_const_op (const_op* e);
   void visit_entry_op (entry_op* e);
   void visit_perf_op (perf_op* e);
 
@@ -5112,6 +5113,12 @@ void
 c_unparser::visit_defined_op (defined_op* e)
 {
   throw SEMANTIC_ERROR(_("cannot translate general @defined expression"), e->tok);
+}
+
+void
+c_unparser::visit_const_op (const_op* e)
+{
+  throw SEMANTIC_ERROR(_("cannot translate general @const expression"), e->tok);
 }
 
 
